--- a/TSEWATCH/src/main/resources/Home.fxml
+++ b/TSEWATCH/src/main/resources/Home.fxml
@@ -231,6 +231,48 @@
             </HBox>
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="rapport_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox layoutX="270.0" layoutY="88.0" spacing="15.0">
+               <children>
+                  <Label text="Axe de veille: ">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="OWL" size="20" />
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox fx:id="page_report_veilleList" prefHeight="20.0" prefWidth="136.0" />
+               </children>
+            </HBox>
+            <TableView fx:id="resultTableView" layoutX="141.0" layoutY="137.0" prefHeight="304.0" prefWidth="537.0">
+              <columns>
+                <TableColumn fx:id="colDate" prefWidth="267.0" text="Date">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="CALENDAR_CHECK" size="20" />
+                     </graphic>
+                  </TableColumn>
+                <TableColumn fx:id="colLien" prefWidth="261.0" text="Lien ">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="EDGE" size="15" />
+                     </graphic>
+                  </TableColumn>
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <JFXButton fx:id="btn_rapport_nouveau" layoutX="648.0" layoutY="448.0" onAction="#handleButtonAction" ripplerFill="#131bb9" text="Nouveau Rapport" textFill="WHITE">
+               <graphic>
+                  <MaterialDesignIconView glyphName="FILE" size="25" />
+               </graphic>
+            </JFXButton>
+            <Pane layoutX="65.0" layoutY="25.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="172.0" layoutY="21.0" opacity="0.5" prefHeight="12.0" prefWidth="150.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+         </children>
+      </AnchorPane>
       <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="211.0" layoutY="61.0">
@@ -287,51 +329,9 @@
             </JFXButton>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="rapport_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox layoutX="270.0" layoutY="88.0" spacing="15.0">
-               <children>
-                  <Label text="Axe de veille: ">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="OWL" size="20" />
-                     </graphic>
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <JFXComboBox fx:id="page_report_veilleList" prefHeight="20.0" prefWidth="136.0" />
-               </children>
-            </HBox>
-            <TableView fx:id="resultTableView" layoutX="141.0" layoutY="137.0" prefHeight="304.0" prefWidth="537.0">
-              <columns>
-                <TableColumn fx:id="colDate" prefWidth="267.0" text="Date">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="CALENDAR_CHECK" size="20" />
-                     </graphic>
-                  </TableColumn>
-                <TableColumn fx:id="colLien" prefWidth="261.0" text="Lien ">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="EDGE" size="15" />
-                     </graphic>
-                  </TableColumn>
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <JFXButton fx:id="btn_rapport_nouveau" layoutX="648.0" layoutY="448.0" onAction="#handleButtonAction" ripplerFill="#131bb9" text="Nouveau Rapport" textFill="WHITE">
-               <graphic>
-                  <MaterialDesignIconView glyphName="FILE" size="25" />
-               </graphic>
-            </JFXButton>
-            <Pane layoutX="65.0" layoutY="25.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="172.0" layoutY="21.0" opacity="0.5" prefHeight="12.0" prefWidth="150.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="axe_pane" layoutX="241.0" prefHeight="551.0" prefWidth="875.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TableView fx:id="veilleTableView" layoutX="52.0" layoutY="93.0" prefHeight="333.0" prefWidth="195.0">
+            <TableView fx:id="veilleTableView" layoutX="52.0" layoutY="65.0" prefHeight="423.0" prefWidth="252.0">
               <columns>
                 <TableColumn fx:id="colVeille" prefWidth="198.0" text="Axe de veille">
                      <graphic>
@@ -339,33 +339,12 @@
                      </graphic>
                   </TableColumn>
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
-            <VBox layoutX="247.0" layoutY="93.0" spacing="3.0">
-               <children>
-                  <JFXButton fx:id="btn_add_axe" alignment="BASELINE_LEFT" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="50.0" ripplerFill="#0747a6" text="Ajouter" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                     <graphic>
-                        <MaterialDesignIconView glyphName="DATABASE_PLUS" size="20" />
-                     </graphic>
-                  </JFXButton>
-                  <JFXButton fx:id="btn_delete_axe" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="58.0" text="Supprimer" textFill="WHITE">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="DATABASE_MINUS" size="20" />
-                     </graphic>
-                  </JFXButton>
-                  <JFXButton fx:id="btn_modify_axe" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="25.0" ripplerFill="#0748a4" text="Modifier" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                     <graphic>
-                        <MaterialDesignIconView glyphName="BORDER_COLOR" size="20" />
-                     </graphic>
-                  </JFXButton>
-               </children>
-            </VBox>
-            <Pane fx:id="add_modify_pane" layoutX="338.0" layoutY="93.0" prefHeight="333.0" prefWidth="429.0">
+            <VBox layoutX="311.0" layoutY="65.0" spacing="3.0" />
+            <Pane fx:id="add_axe_pane" layoutX="384.0" layoutY="93.0" prefHeight="333.0" prefWidth="429.0">
                <children>
                   <HBox layoutX="89.0" layoutY="42.0" spacing="15.0">
                      <children>
@@ -397,6 +376,60 @@
             <Pane layoutX="50.0" layoutY="531.0" prefHeight="12.0" prefWidth="200.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <Pane layoutX="463.0" layoutY="23.0" opacity="0.5" prefHeight="12.0" prefWidth="200.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <Pane layoutX="668.0" layoutY="31.0" opacity="0.8" prefHeight="70.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <VBox layoutX="311.0" layoutY="65.0">
+               <children>
+                  <JFXButton fx:id="btn_delete_axe" alignment="TOP_LEFT" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="58.0" text="Supprimer" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="DATABASE_MINUS" size="20" />
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btn_add_axe" alignment="BASELINE_LEFT" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="58.0" ripplerFill="#0747a6" text="Ajouter" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                     <graphic>
+                        <MaterialDesignIconView glyphName="DATABASE_PLUS" size="20" wrappingWidth="25.0" />
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btn_modify_axe" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="58.0" ripplerFill="#0748a4" text="Modifier" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                     <graphic>
+                        <MaterialDesignIconView glyphName="BORDER_COLOR" size="20" />
+                     </graphic>
+                  </JFXButton>
+               </children>
+            </VBox>
+            <Pane fx:id="modify_axe_pane" layoutX="384.0" layoutY="93.0" prefHeight="333.0" prefWidth="429.0">
+               <children>
+                  <HBox layoutX="89.0" layoutY="42.0" spacing="15.0">
+                     <children>
+                        <Label prefHeight="24.0" prefWidth="107.0" text="Nom de l'axe:">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Label>
+                        <JFXTextField fx:id="nameVeilleTextField_modify" prefHeight="24.0" prefWidth="185.0" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="257.0" layoutY="291.0">
+                     <children>
+                        <JFXButton fx:id="btn_annuler_axe_modify" onAction="#handleButtonAction" ripplerFill="#0648a4" text="Annuler" textFill="WHITE">
+                           <graphic>
+                              <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="20" />
+                           </graphic>
+                        </JFXButton>
+                        <JFXButton fx:id="btn_save_axe_modify" onAction="#handleButtonAction" ripplerFill="#0649a1" text="Add" textFill="WHITE">
+                           <graphic>
+                              <MaterialDesignIconView glyphName="CHECK" size="20" />
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+                  <TextArea fx:id="keywordsTextField_modify" layoutX="89.0" layoutY="85.0" prefHeight="190.0" prefWidth="307.0" promptText="Mots cles" />
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
    </children>
