--- a/TSEWATCH/src/main/resources/Home.fxml
+++ b/TSEWATCH/src/main/resources/Home.fxml
@@ -205,62 +205,6 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox layoutX="211.0" layoutY="61.0">
-               <children>
-                  <Label text="Liste de diffusion : ">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <JFXComboBox fx:id="list_diffusion" prefHeight="20.0" prefWidth="218.0" />
-               </children>
-            </HBox>
-            <TableView fx:id="clientTableView" layoutX="66.0" layoutY="93.0" prefHeight="373.0" prefWidth="679.0">
-              <columns>
-                <TableColumn fx:id="colClient" prefWidth="343.0" text="Client">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="ACCOUNT" size="20" />
-                     </graphic>
-                  </TableColumn>
-                <TableColumn fx:id="colEmail" minWidth="0.0" prefWidth="335.0" text="Email">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="GMAIL" size="20" />
-                     </graphic>
-                  </TableColumn>
-              </columns>
-            </TableView>
-            <JFXButton fx:id="btn_envoyer" layoutX="684.0" layoutY="472.0" onAction="#handleButtonAction" ripplerFill="#1d14c3" text=" " textFill="WHITE">
-               <graphic>
-                  <MaterialDesignIconView glyphName="SEND" size="20" />
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="btn_add_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="110.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="50.0" ripplerFill="#0747a6" text=" " textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-               <graphic>
-                  <MaterialDesignIconView glyphName="ACCOUNT_PLUS" size="20" wrappingWidth="20.0" />
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="btn_delete_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="28.0" prefWidth="50.0" ripplerFill="#0748a4" text=" " textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </JFXButton>
-            <Pane layoutX="44.0" layoutY="14.0" prefHeight="12.0" prefWidth="859.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <Pane layoutX="700.0" layoutY="14.0" opacity="0.5" prefHeight="12.0" prefWidth="159.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="562.0" layoutY="14.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <MaterialDesignIconView glyphName="DELETE" layoutX="760.0" layoutY="179.0" size="20" wrappingWidth="20.0" />
-            <HBox layoutX="97.0" layoutY="55.0" spacing="2.0" />
-            <JFXButton fx:id="btn_modify_listd" layoutX="579.0" layoutY="61.0" onAction="#handleButtonAction" prefHeight="20.0" prefWidth="16.0" ripplerFill="#f81212" text="..." textFill="WHITE">
-               <graphic>
-                  <MaterialDesignIconView glyphName="SETTINGS" />
-               </graphic>
-            </JFXButton>
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="axe_pane" layoutX="241.0" prefHeight="551.0" prefWidth="875.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <TableView fx:id="veilleTableView" layoutX="52.0" layoutY="65.0" prefHeight="423.0" prefWidth="252.0">
@@ -386,11 +330,12 @@
                         <MaterialDesignIconView glyphName="CALENDAR_CHECK" size="20" />
                      </graphic>
                   </TableColumn>
-                <TableColumn fx:id="colTitre" prefWidth="365.0" text="Titre">
+                <TableColumn fx:id="colTitre" minWidth="180.0" prefWidth="312.0" text="Titre">
                      <graphic>
                         <MaterialDesignIconView glyphName="EDGE" size="15" />
                      </graphic>
                   </TableColumn>
+                  <TableColumn fx:id="colSelect" maxWidth="45.0" minWidth="45.0" prefWidth="45.0" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -415,6 +360,62 @@
             <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox layoutX="211.0" layoutY="61.0">
+               <children>
+                  <Label text="Liste de diffusion : ">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox fx:id="list_diffusion" prefHeight="20.0" prefWidth="218.0" />
+               </children>
+            </HBox>
+            <TableView fx:id="clientTableView" layoutX="66.0" layoutY="93.0" prefHeight="373.0" prefWidth="679.0">
+              <columns>
+                <TableColumn fx:id="colClient" prefWidth="343.0" text="Client">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="ACCOUNT" size="20" />
+                     </graphic>
+                  </TableColumn>
+                <TableColumn fx:id="colEmail" minWidth="0.0" prefWidth="335.0" text="Email">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="GMAIL" size="20" />
+                     </graphic>
+                  </TableColumn>
+              </columns>
+            </TableView>
+            <JFXButton fx:id="btn_envoyer" layoutX="684.0" layoutY="472.0" onAction="#handleButtonAction" ripplerFill="#1d14c3" text=" " textFill="WHITE">
+               <graphic>
+                  <MaterialDesignIconView glyphName="SEND" size="20" />
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="btn_add_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="110.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="50.0" ripplerFill="#0747a6" text=" " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <MaterialDesignIconView glyphName="ACCOUNT_PLUS" size="20" wrappingWidth="20.0" />
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="btn_delete_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="28.0" prefWidth="50.0" ripplerFill="#0748a4" text=" " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </JFXButton>
+            <Pane layoutX="44.0" layoutY="14.0" prefHeight="12.0" prefWidth="859.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Pane layoutX="700.0" layoutY="14.0" opacity="0.5" prefHeight="12.0" prefWidth="159.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="562.0" layoutY="14.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <MaterialDesignIconView glyphName="DELETE" layoutX="760.0" layoutY="179.0" size="20" wrappingWidth="20.0" />
+            <HBox layoutX="97.0" layoutY="55.0" spacing="2.0" />
+            <JFXButton fx:id="btn_modify_listd" layoutX="579.0" layoutY="61.0" onAction="#handleButtonAction" prefHeight="20.0" prefWidth="16.0" ripplerFill="#f81212" text="..." textFill="WHITE">
+               <graphic>
+                  <MaterialDesignIconView glyphName="SETTINGS" />
+               </graphic>
+            </JFXButton>
+         </children>
+      </AnchorPane>
       <AnchorPane fx:id="recherche_pane" layoutX="532.0" prefHeight="551.0" prefWidth="510.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="185.0" layoutY="238.0" prefHeight="38.0" prefWidth="489.0" spacing="5.0">
@@ -428,7 +429,7 @@
                      </graphic>
                   </Label>
                   <JFXComboBox fx:id="siteList" prefHeight="30.0" prefWidth="291.0" />
-                  <JFXButton fx:id="btn_recherche_ok" onAction="#handleButtonAction" prefHeight="32.0" prefWidth="50.0" text="GO">
+                  <JFXButton fx:id="btn_recherche_ok" onAction="#handleButtonAction" text="GO">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -454,7 +455,7 @@
                      <children>
                         <HBox spacing="10.0">
                            <children>
-                              <Label prefHeight="28.0" prefWidth="53.0" text="Mot clé">
+                              <Label fx:id="label_mot" text="Mot clé">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
@@ -464,7 +465,7 @@
                         </HBox>
                         <HBox spacing="10.0">
                            <children>
-                              <Label prefHeight="28.0" prefWidth="49.0" text="Region">
+                              <Label fx:id="label_region" text="Region">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
@@ -476,13 +477,13 @@
                   </HBox>
                   <HBox layoutX="38.0" layoutY="86.0" prefHeight="28.0" prefWidth="467.0" spacing="15.0">
                      <children>
-                        <Label text="De">
+                        <Label fx:id="label_de" text="De">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Label>
                         <JFXDatePicker fx:id="option_de" />
-                        <Label prefHeight="27.0" prefWidth="11.0" text="A">
+                        <Label fx:id="label_a" text="A">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -490,9 +491,9 @@
                         <JFXDatePicker fx:id="option_a" />
                      </children>
                   </HBox>
-                  <HBox layoutX="38.0" layoutY="145.0" spacing="15.0">
+                  <HBox fx:id="hbox_parution" layoutX="38.0" layoutY="145.0" spacing="15.0">
                      <children>
-                        <Label text="Date de parution">
+                        <Label fx:id="label_parution" text="Date de parution">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
